NGINX/postgres-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-postgresql
  namespace: postgresql
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - postgresql.nodes-lb-arm.duckdns.org
    secretName: postgresql-tls
  rules:
  - host: postgresql.nodes-lb-arm.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: postgresql-prod-service
            port:
              number: 55432
